- account for iphone notch - prevent iphone from messing with the font sizes - add padding underneath cta for better positioning on mobile when scrolled to the bottom

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
   background: #fff8a5;
   padding: 50px 75px;
   color: #111;
+  -webkit-text-size-adjust: 100%;
 }
 header {
   margin-bottom: 100px;
@@ -91,6 +92,7 @@ p.heading strong {
   display: flex;
   justify-content: center;
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 .btn.btn-outline {
   color: #ff4731;
@@ -162,7 +164,7 @@ p.heading strong {
 
 @media (max-width: 896px) {
   body {
-    padding: 25px 40px;
+    padding: 25px 45px;
   }
   header .bullets {
     font-size: 12px;
